--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@smui/form-field": "^6.0.0-beta.13",
+    "@smui/radio": "^6.0.0-beta.13",
+    "@smui/textfield": "^6.0.0-beta.13",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-static": "^1.0.0-next.28",
     "@sveltejs/kit": "next",
@@ -28,5 +31,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-material-ui": "^6.0.0-beta.13"
+  }
 }
