Add draft register page with Nautilus support

--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@smui/button": "^6.0.0-beta.13",
+    "@smui/checkbox": "^6.0.0-beta.13",
+    "@smui/common": "^6.0.0-beta.13",
     "@smui/form-field": "^6.0.0-beta.13",
+    "@smui/paper": "^6.0.0-beta.13",
     "@smui/radio": "^6.0.0-beta.13",
+    "@smui/segmented-button": "^6.0.0-beta.13",
     "@smui/textfield": "^6.0.0-beta.13",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-static": "^1.0.0-next.28",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "ergo-lib-wasm-browser": "^0.14.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
